--- a/mdt/data/qt_designs/maps_visualizer/main.qrc
+++ b/mdt/data/qt_designs/maps_visualizer/main.qrc
@@ -1,5 +1,7 @@
 <RCC>
   <qresource prefix="main">
+    <file>arrow_redo.png</file>
+    <file>arrow_undo.png</file>
     <file>../../logo.gif</file>
   </qresource>
 </RCC>
