--- a/mdt/data/qt_designs/maps_visualizer/MapSpecificOptions.ui
+++ b/mdt/data/qt_designs/maps_visualizer/MapSpecificOptions.ui
@@ -32,7 +32,7 @@
    <property name="verticalSpacing">
     <number>10</number>
    </property>
-   <item row="2" column="0">
+   <item row="4" column="0">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -116,107 +116,139 @@
          <property name="verticalSpacing">
           <number>3</number>
          </property>
-         <item row="3" column="0">
-          <widget class="QLabel" name="label_23">
+         <item row="1" column="0">
+          <widget class="QLabel" name="label_3">
            <property name="text">
-            <string>Clipping:</string>
+            <string>Colorbar label:</string>
            </property>
           </widget>
          </item>
-         <item row="4" column="0">
+         <item row="0" column="1">
+          <widget class="QLineEdit" name="map_title"/>
+         </item>
+         <item row="2" column="1">
+          <widget class="QComboBox" name="colormap"/>
+         </item>
+         <item row="2" column="0">
           <widget class="QLabel" name="label_9">
            <property name="text">
             <string>Colormap:</string>
            </property>
           </widget>
          </item>
-         <item row="4" column="1">
-          <widget class="QComboBox" name="colormap"/>
-         </item>
-         <item row="0" column="1">
-          <widget class="QLineEdit" name="map_title"/>
+         <item row="1" column="1">
+          <widget class="QLineEdit" name="data_colorbar_label"/>
          </item>
          <item row="0" column="0">
           <widget class="QLabel" name="label_21">
            <property name="text">
-            <string>Title:</string>
+            <string>Title (latex):</string>
            </property>
           </widget>
          </item>
-         <item row="3" column="1">
-          <layout class="QGridLayout" name="gridLayout_5" columnstretch="1,0" columnminimumwidth="0,0">
-           <property name="bottomMargin">
-            <number>4</number>
+        </layout>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="CollapsablePanel" name="frame_3">
+     <property name="frameShape">
+      <enum>QFrame::NoFrame</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_7">
+      <property name="spacing">
+       <number>0</number>
+      </property>
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="CollapsablePanelHeader" name="label_22">
+        <property name="font">
+         <font>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>Scale</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="Line" name="line_5">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="CollapsablePanelContent" name="frame_6">
+        <property name="frameShape">
+         <enum>QFrame::NoFrame</enum>
+        </property>
+        <property name="frameShadow">
+         <enum>QFrame::Plain</enum>
+        </property>
+        <layout class="QGridLayout" name="gridLayout_6" columnstretch="0">
+         <property name="leftMargin">
+          <number>6</number>
+         </property>
+         <property name="topMargin">
+          <number>6</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+         <property name="horizontalSpacing">
+          <number>6</number>
+         </property>
+         <property name="verticalSpacing">
+          <number>3</number>
+         </property>
+         <item row="0" column="0">
+          <layout class="QGridLayout" name="gridLayout_7" columnstretch="0,1,0">
+           <property name="topMargin">
+            <number>0</number>
            </property>
-           <item row="0" column="0">
-            <widget class="ScientificDoubleSpinBox" name="data_clipping_max">
-             <property name="minimum">
-              <double>-9999999999.989999771118164</double>
-             </property>
-             <property name="maximum">
-              <double>9999999999.989999771118164</double>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0">
-            <widget class="ScientificDoubleSpinBox" name="data_clipping_min">
-             <property name="minimum">
-              <double>-9999999999.989999771118164</double>
-             </property>
-             <property name="maximum">
-              <double>9999999999.989999771118164</double>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="1">
-            <widget class="QCheckBox" name="use_data_clipping_max">
+           <property name="bottomMargin">
+            <number>0</number>
+           </property>
+           <item row="2" column="2">
+            <widget class="QCheckBox" name="use_data_scale_max">
              <property name="text">
               <string/>
              </property>
             </widget>
            </item>
-           <item row="1" column="1">
-            <widget class="QCheckBox" name="use_data_clipping_min">
+           <item row="3" column="1">
+            <widget class="QLabel" name="label_4">
              <property name="text">
-              <string/>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="1">
-            <widget class="QCheckBox" name="data_set_use_clipping">
-             <property name="text">
-              <string/>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_2">
-             <property name="text">
-              <string>Use clipping:</string>
+              <string>Enable:</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
              </property>
             </widget>
            </item>
-          </layout>
-         </item>
-         <item row="2" column="0">
-          <widget class="QLabel" name="label_10">
-           <property name="text">
-            <string>Scale:</string>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="1">
-          <layout class="QGridLayout" name="gridLayout_2" columnstretch="1,0">
-           <property name="topMargin">
-            <number>4</number>
-           </property>
-           <property name="bottomMargin">
-            <number>4</number>
-           </property>
-           <item row="1" column="0">
+           <item row="0" column="1">
             <widget class="ScientificDoubleSpinBox" name="data_scale_min">
              <property name="specialValueText">
               <string/>
@@ -229,17 +261,7 @@
              </property>
             </widget>
            </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label">
-             <property name="text">
-              <string>Use scaling:</string>
-             </property>
-             <property name="alignment">
-              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="0">
+           <item row="2" column="1">
             <widget class="ScientificDoubleSpinBox" name="data_scale_max">
              <property name="minimum">
               <double>-9999999999.989999771118164</double>
@@ -249,38 +271,35 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="1">
-            <widget class="QCheckBox" name="use_data_scale_max">
-             <property name="text">
-              <string/>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1">
+           <item row="0" column="2">
             <widget class="QCheckBox" name="use_data_scale_min">
              <property name="text">
               <string/>
              </property>
             </widget>
            </item>
-           <item row="2" column="1">
+           <item row="3" column="2">
             <widget class="QCheckBox" name="data_set_use_scale">
              <property name="text">
               <string/>
              </property>
             </widget>
            </item>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label">
+             <property name="text">
+              <string>Min:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_5">
+             <property name="text">
+              <string>Max:</string>
+             </property>
+            </widget>
+           </item>
           </layout>
-         </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="label_3">
-           <property name="text">
-            <string>Colorbar label:</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QLineEdit" name="data_colorbar_label"/>
          </item>
         </layout>
        </widget>
@@ -288,7 +307,7 @@
      </layout>
     </widget>
    </item>
-   <item row="1" column="0">
+   <item row="3" column="0">
     <widget class="CollapsablePanel" name="frame_2">
      <property name="frameShape">
       <enum>QFrame::NoFrame</enum>
@@ -410,6 +429,158 @@
      </layout>
     </widget>
    </item>
+   <item row="2" column="0">
+    <widget class="CollapsablePanel" name="frame_7">
+     <property name="frameShape">
+      <enum>QFrame::NoFrame</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_8">
+      <property name="spacing">
+       <number>0</number>
+      </property>
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="CollapsablePanelHeader" name="label_25">
+        <property name="font">
+         <font>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>Clipping</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="Line" name="line_6">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="CollapsablePanelContent" name="frame_8">
+        <property name="frameShape">
+         <enum>QFrame::NoFrame</enum>
+        </property>
+        <property name="frameShadow">
+         <enum>QFrame::Plain</enum>
+        </property>
+        <layout class="QGridLayout" name="gridLayout_8" columnstretch="0">
+         <property name="leftMargin">
+          <number>6</number>
+         </property>
+         <property name="topMargin">
+          <number>6</number>
+         </property>
+         <property name="rightMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+         <property name="horizontalSpacing">
+          <number>6</number>
+         </property>
+         <property name="verticalSpacing">
+          <number>3</number>
+         </property>
+         <item row="0" column="0">
+          <layout class="QGridLayout" name="gridLayout_9" columnstretch="0,1,0">
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <property name="bottomMargin">
+            <number>0</number>
+           </property>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_7">
+             <property name="text">
+              <string>Min:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="2">
+            <widget class="QCheckBox" name="data_set_use_clipping">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="2">
+            <widget class="QCheckBox" name="use_data_clipping_min">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="1">
+            <widget class="QLabel" name="label_2">
+             <property name="text">
+              <string>Enable:</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="1">
+            <widget class="ScientificDoubleSpinBox" name="data_clipping_min">
+             <property name="minimum">
+              <double>-9999999999.989999771118164</double>
+             </property>
+             <property name="maximum">
+              <double>9999999999.989999771118164</double>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="ScientificDoubleSpinBox" name="data_clipping_max">
+             <property name="minimum">
+              <double>-9999999999.989999771118164</double>
+             </property>
+             <property name="maximum">
+              <double>9999999999.989999771118164</double>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="2">
+            <widget class="QCheckBox" name="use_data_clipping_max">
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0">
+            <widget class="QLabel" name="label_8">
+             <property name="text">
+              <string>Max:</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
   </layout>
  </widget>
  <customwidgets>
@@ -439,17 +610,17 @@
  <tabstops>
   <tabstop>map_title</tabstop>
   <tabstop>data_colorbar_label</tabstop>
-  <tabstop>data_scale_max</tabstop>
-  <tabstop>use_data_scale_max</tabstop>
-  <tabstop>data_scale_min</tabstop>
-  <tabstop>use_data_scale_min</tabstop>
-  <tabstop>data_set_use_scale</tabstop>
-  <tabstop>data_clipping_max</tabstop>
-  <tabstop>use_data_clipping_max</tabstop>
-  <tabstop>data_clipping_min</tabstop>
-  <tabstop>use_data_clipping_min</tabstop>
-  <tabstop>data_set_use_clipping</tabstop>
   <tabstop>colormap</tabstop>
+  <tabstop>data_scale_min</tabstop>
+  <tabstop>data_scale_max</tabstop>
+  <tabstop>use_data_scale_min</tabstop>
+  <tabstop>use_data_scale_max</tabstop>
+  <tabstop>data_set_use_scale</tabstop>
+  <tabstop>data_clipping_min</tabstop>
+  <tabstop>data_clipping_max</tabstop>
+  <tabstop>use_data_clipping_min</tabstop>
+  <tabstop>use_data_clipping_max</tabstop>
+  <tabstop>data_set_use_clipping</tabstop>
  </tabstops>
  <resources/>
  <connections/>
