--- a/mdt/data/qt_designs/maps_visualizer/TabTextual.ui
+++ b/mdt/data/qt_designs/maps_visualizer/TabTextual.ui
@@ -43,6 +43,9 @@
      <property name="alignment">
       <set>Qt::AlignCenter</set>
      </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
   </layout>
