Some work on the GUI

--- a/mdt/data/qt_designs/maps_visualizer/MainWindow.ui
+++ b/mdt/data/qt_designs/maps_visualizer/MainWindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Maps Visualizer - MDT</string>
+   <string>MDT Maps Visualizer</string>
   </property>
   <property name="windowIcon">
    <iconset resource="main.qrc">
