Updates to the GUI, try to get it to run with the bug report from Julich

--- a/mdt/data/qt_designs/model_fit/fit_model_tab.ui
+++ b/mdt/data/qt_designs/model_fit/fit_model_tab.ui
@@ -333,7 +333,7 @@
      <item>
       <widget class="QPushButton" name="runButton">
        <property name="enabled">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
        <property name="text">
         <string>Run</string>
