--- a/mdt/data/qt_designs/maps_visualizer/TabGeneral.ui
+++ b/mdt/data/qt_designs/maps_visualizer/TabGeneral.ui
@@ -41,7 +41,7 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>0</y>
+        <y>-449</y>
         <width>946</width>
         <height>1151</height>
        </rect>
@@ -659,19 +659,6 @@
              <property name="verticalSpacing">
               <number>3</number>
              </property>
-             <item row="1" column="1">
-              <widget class="QLabel" name="general_info_directory">
-               <property name="text">
-                <string>-</string>
-               </property>
-               <property name="wordWrap">
-                <bool>true</bool>
-               </property>
-               <property name="textInteractionFlags">
-                <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
-               </property>
-              </widget>
-             </item>
              <item row="1" column="0">
               <widget class="QLabel" name="label_3">
                <property name="text">
@@ -682,7 +669,7 @@
              <item row="2" column="0">
               <widget class="QLabel" name="label_7">
                <property name="text">
-                <string>Number of maps:</string>
+                <string>Map count:</string>
                </property>
               </widget>
              </item>
@@ -690,6 +677,19 @@
               <widget class="QLabel" name="general_info_nmr_maps">
                <property name="text">
                 <string>-</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="1">
+              <widget class="QLabel" name="general_info_directory">
+               <property name="text">
+                <string>-</string>
+               </property>
+               <property name="wordWrap">
+                <bool>true</bool>
+               </property>
+               <property name="textInteractionFlags">
+                <set>Qt::LinksAccessibleByMouse</set>
                </property>
               </widget>
              </item>
