--- a/mdt/data/qt_designs/model_fit/about_dialog.ui
+++ b/mdt/data/qt_designs/model_fit/about_dialog.ui
@@ -48,7 +48,7 @@
           <string/>
          </property>
          <property name="pixmap">
-          <pixmap resource="main_gui.qrc">:/main_gui/logo.gif</pixmap>
+          <pixmap resource="main_gui.qrc">:/main_gui/logo</pixmap>
          </property>
         </widget>
        </item>
