Adds line wrap to the shells qlabel in the model fit GUI at the protocol tab. Version bump

--- a/mdt/data/qt_designs/model_fit/generate_protocol_tab.ui
+++ b/mdt/data/qt_designs/model_fit/generate_protocol_tab.ui
@@ -263,6 +263,9 @@
          <property name="text">
           <string>-</string>
          </property>
+         <property name="wordWrap">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
        <item>
