--- a/mdt/data/qt_designs/model_fit/fit_model_tab.ui
+++ b/mdt/data/qt_designs/model_fit/fit_model_tab.ui
@@ -279,6 +279,16 @@
      </item>
      <item row="7" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_4">
+       <property name="spacing">
+        <number>10</number>
+       </property>
+       <item>
+        <widget class="QPushButton" name="additionalDataButton">
+         <property name="text">
+          <string>Additional data</string>
+         </property>
+        </widget>
+       </item>
        <item>
         <widget class="QPushButton" name="optimizationOptionsButton">
          <property name="text">
@@ -383,6 +393,8 @@
   <tabstop>selectOutputFolder</tabstop>
   <tabstop>selectedOutputFolder</tabstop>
   <tabstop>modelSelection</tabstop>
+  <tabstop>additionalDataButton</tabstop>
+  <tabstop>optimizationOptionsButton</tabstop>
   <tabstop>runButton</tabstop>
  </tabstops>
  <resources/>
